--- a/index.html
+++ b/index.html
@@ -5,21 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Atlas of Data</title>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/alchemyjs/0.4.0/alchemy.min.css" rel="stylesheet">
   <style>
-    .node circle {
-      fill: #3498db;
-      stroke: #fff;
-      stroke-width: 3px;
+    body, html {
+      height: 100%;
+      margin: 0;
+      display: flex;
+      flex-direction: column;
     }
-
-    .node text {
-      fill: #fff;
-      font-size: 12px;
+    #alchemy {
+      flex: 1;
+      width: 100%;
     }
-
-    .link {
-      stroke: #bbb;
-      stroke-width: 2px;
+    .footer {
+      flex-shrink: 0;
     }
   </style>
 </head>
@@ -32,13 +31,7 @@
   </header>
 
   <!-- Placeholder for the Atlas -->
-  <div class="container">
-    <div class="row">
-      <div class="col text-center my-5">
-        <div id="atlas" style="height: 600px;"></div>
-      </div>
-    </div>
-  </div>
+  <div id="alchemy"></div>
 
   <!-- Footer -->
   <footer class="footer bg-dark text-center text-white py-3">
@@ -47,72 +40,31 @@
     </div>
   </footer>
 
-  <script src="https://d3js.org/d3.v6.min.js"></script>
+  <!-- Include dependencies -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/alchemyjs/0.4.0/alchemy.min.js"></script>
   <script>
     document.addEventListener("DOMContentLoaded", function() {
-      fetch('data.json')
+      fetch('https://raw.githubusercontent.com/Orion-F/atlas-of-data/main/data.json')
         .then(response => response.json())
         .then(data => {
-          const width = document.getElementById('atlas').clientWidth;
-          const height = 600;
+          const alchemyConfig = {
+            dataSource: data,
+            graphHeight: function() {
+              return document.getElementById('alchemy').clientHeight;
+            },
+            graphWidth: function() {
+              return document.getElementById('alchemy').clientWidth;
+            },
+            forceLocked: false,
+            nodeCaption: 'id',
+            linkCaption: 'link',
+            captionAlignment: 'center',
+            backgroundColour: '#F5F5F5'
+          };
 
-          const svg = d3.select("#atlas").append("svg")
-            .attr("width", width)
-            .attr("height", height);
-
-          const simulation = d3.forceSimulation(data.nodes)
-            .force("link", d3.forceLink(data.links).id(d => d.id).distance(200))
-            .force("charge", d3.forceManyBody().strength(-500))
-            .force("center", d3.forceCenter(width / 2, height / 2));
-
-          const link = svg.append("g")
-            .attr("class", "links")
-            .selectAll("line")
-            .data(data.links)
-            .enter().append("line")
-            .attr("class", "link");
-
-          const node = svg.append("g")
-            .attr("class", "nodes")
-            .selectAll("g")
-            .data(data.nodes)
-            .enter().append("g")
-            .attr("class", "node");
-
-          node.append("circle")
-            .attr("r", 10);
-
-          node.append("text")
-            .attr("dy", -3)
-            .attr("x", 12)
-            .text(d => d.id);
-
-          simulation.on("tick", () => {
-            link
-              .attr("x1", d => d.source.x)
-              .attr("y1", d => d.source.y)
-              .attr("x2", d => d.target.x)
-              .attr("y2", d => d.target.y);
-
-            node
-              .attr("transform", d => `translate(${d.x},${d.y})`);
-          });
-
-          node.call(d3.drag()
-            .on("start", (event, d) => {
-              if (!event.active) simulation.alphaTarget(0.3).restart();
-              d.fx = d.x;
-              d.fy = d.y;
-            })
-            .on("drag", (event, d) => {
-              d.fx = event.x;
-              d.fy = event.y;
-            })
-            .on("end", (event, d) => {
-              if (!event.active) simulation.alphaTarget(0);
-              d.fx = null;
-              d.fy = null;
-            }));
+          alchemy = new Alchemy(alchemyConfig);
         });
     });
   </script>
